Margin fix for mobile and various improvments
Update for lighter photo background (Clezer for business)
Fixed Phone margin that was too large for mobile
Wording fot the main CAT

--- a/static/css/skin-clezer.css
+++ b/static/css/skin-clezer.css
@@ -114,8 +114,7 @@ h6{
 }
 div.laptop-wrapper {
 	position: relative;
-	padding-top: 70px;
-	height: 1000px;
+	padding-top: 10px;
 }
 div.laptop-wrapper video {
 	box-sizing: border-box;
@@ -494,7 +493,7 @@ body,
 	padding-bottom: 4rem;
 }
 .section-block.feature-2{
-	padding-bottom: 12rem;
+	padding-bottom: 2rem;
 }
 .divider{
 	margin-top: 1px;
